<?xml version="1.0"?>
<package format="2">
  <name>fkie_iop_global_pose_sensor</name>
  <version>1.1.0</version>
  <description>Translation of the global position sensor service functionality to/from ROS</description>

  <author>Alexander Tiderko</author>
  <maintainer email="alexander.tiderko@fkie.fraunhofer.de">Alexander Tiderko</maintainer>
  <license>GPLv2</license>
  <url type="website">https://github.com/fkie/iop_jaus_mobility</url>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>fkie_iop_accesscontrol</depend>
  <depend>fkie_iop_component</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>

  <export>
    <fkie_iop_component plugin="${prefix}/plugin_iop.xml" />
  </export>

</package>
