<?xml version="1.0"?>
<package format="3">
  <name>fkie_iop_velocity_state_sensor</name>
  <version>1.0.0</version>
  <description>Translation of the velocity state sensor service functionality to/from ROS</description>

  <author>Shivesh Khaitan</author>
  <author>Sarthak Mittal</author>
  <maintainer email="shiveshkhaitan@gmail.com">Shivesh Khaitan</maintainer>
  <maintainer email="sarthakmittal2608@gmail.com">Sarthak Mittal</maintainer>
  <license>GPLv2</license>
  <url type="website">https://github.com/fkie/iop_jaus_mobility</url>

  <depend>fkie_iop_management</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
