<?xml version="1.0"?>
<package>
  <name>iop_global_pose_sensor_fkie</name>
  <version>1.0.0</version>
  <description>The iop_global_pose_sensor_fkie package</description>

  <maintainer email="alexander.tiderko@fkie.fraunhofer.de">Alexander Tiderko</maintainer>
  <license>GPLv2</license>
  <url type="website">https://github.com/fkie/iop_jaus_mobility</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>iop_accesscontrol_1_0_fkie</build_depend>
  <build_depend>iop_builder_fkie</build_depend>
  <build_depend>iop_component_fkie</build_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>iop_accesscontrol_1_0_fkie</run_depend>
  <run_depend>iop_builder_fkie</run_depend>
  <run_depend>iop_component_fkie</run_depend>
  <run_depend>sensor_msgs</run_depend>

  <export>
    <iop_component_fkie plugin="${prefix}/plugin_iop.xml" />
  </export>

</package>
