<?xml version="1.0"?>
<package format="2">
  <name>iop_global_pose_sensor_fkie</name>
  <version>1.1.0</version>
  <description>Translation of the global position sensor service functionality to/from ROS</description>

  <author>Alexander Tiderko</author>
  <maintainer email="alexander.tiderko@fkie.fraunhofer.de">Alexander Tiderko</maintainer>
  <license>GPLv2</license>
  <url type="website">https://github.com/fkie/iop_jaus_mobility</url>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>iop_accesscontrol_fkie</depend>
  <depend>iop_component_fkie</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>

  <export>
    <iop_component_fkie plugin="${prefix}/plugin_iop.xml" />
  </export>

</package>
