<?xml version="1.0"?>
<package format="2">
	<name>iop_velocity_state_sensor_fkie</name>
	<version>1.0.0</version>
	<description>Translation of the velocity state sensor service functionality to/from ROS</description>

	<author>Shivesh Khaitan</author>
	<author>Sarthak Mittal</author>
	<maintainer email="shiveshkhaitan@gmail.com">Shivesh Khaitan</maintainer>
	<maintainer email="sarthakmittal2608@gmail.com">Sarthak Mittal</maintainer>
	<license>GPLv2</license>
	<url type="website">https://github.com/fkie/iop_jaus_mobility</url>

	<buildtool_depend>catkin</buildtool_depend>
	<depend>iop_component_fkie</depend>
	<depend>iop_management_fkie</depend>
	<depend>nav_msgs</depend>
	<depend>roscpp</depend>

	<export>
		<iop_component_fkie plugin="${prefix}/plugin_iop.xml" />
	</export>
</package>
